[tool.poetry]
name = "aws-appstream-userdata-path"
version = "0.1.0"
description = ""
authors = ["Violet Vivirand <purpleslovemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.53"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
rich = "^12.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
